--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,10 +70,12 @@
         android:onClick="goToResults"
         />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="@string/email_title"
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
-        android:onClick="goToEmail"/>
+        android:onClick="goToEmail"
+        android:layout_marginTop="15dp"
+        />
 </RelativeLayout>
