--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,60 +15,47 @@
         android:layout_height="@dimen/main_select_dimen"
         android:text="@string/daily_title"
         android:layout_width="@dimen/main_select_dimen"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="25dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="54dp"
         android:gravity="center"
         android:background = "@drawable/my_border"
         android:onClick="goToDaily"
-
-        />
+        android:id="@+id/button4"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/button5"
+        android:layout_alignStart="@+id/button5" />
     <Button
         android:layout_height="@dimen/main_select_dimen"
         android:text="@string/stretch_title"
         android:layout_width="@dimen/main_select_dimen"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="25dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="175dp"
-        android:layout_marginTop="50dp"
         android:background = "@drawable/my_border"
         android:gravity="center"
         android:onClick="goToStretch"
-        />
+        android:layout_alignTop="@+id/button4"
+        android:layout_alignRight="@+id/button5"
+        android:layout_alignEnd="@+id/button5"
+        android:id="@+id/button6" />
     <Button
         android:layout_height="@dimen/main_select_dimen"
         android:text="@string/exercs_title"
         android:layout_width="@dimen/main_select_dimen"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="25dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop= "200dp"
         android:background = "@drawable/my_border"
         android:gravity="center"
         android:onClick="goToExercise"
 
-        android:id="@+id/button" />
+        android:id="@+id/button"
+        android:layout_below="@+id/button4"
+        android:layout_alignLeft="@+id/button4"
+        android:layout_alignStart="@+id/button4" />
     <Button
         android:layout_height="@dimen/main_select_dimen"
         android:text="@string/results_title"
         android:layout_width="@dimen/main_select_dimen"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="25dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="175dp"
-        android:layout_marginTop="200dp"
         android:background = "@drawable/my_border"
         android:gravity="center"
         android:onClick="goToResults"
-        />
+        android:layout_below="@+id/button6"
+        android:layout_toRightOf="@+id/button4"
+        android:layout_toEndOf="@+id/button4" />
     <Button
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -77,5 +64,5 @@
         android:layout_centerHorizontal="true"
         android:onClick="goToEmail"
         android:layout_marginTop="15dp"
-        />
+        android:id="@+id/button5" />
 </RelativeLayout>
