--- a/app/src/main/res/layout/daily_section.xml
+++ b/app/src/main/res/layout/daily_section.xml
@@ -68,21 +68,23 @@
         android:id="@+id/up"
         android:layout_width="@dimen/up_button_width"
         android:layout_height="@dimen/up_button_height"
-        android:background="@mipmap/up_arrow"
+        android:background="@drawable/up_background"
         android:layout_alignTop="@+id/flexion"
         android:layout_alignRight="@+id/onOff"
-        android:layout_alignEnd="@+id/onOff" />
+        android:layout_alignEnd="@+id/onOff"
+        android:padding="5dp"/>
 
     <Button
         android:id="@+id/down"
         android:layout_width="@dimen/up_button_width"
         android:layout_height="@dimen/up_button_height"
-        android:background="@mipmap/down_arrow"
+        android:background="@drawable/down_background"
         android:layout_alignBottom="@+id/speed"
         android:layout_alignLeft="@+id/up"
         android:layout_alignStart="@+id/up"
         android:layout_alignRight="@+id/up"
-        android:layout_alignEnd="@+id/up" />
+        android:layout_alignEnd="@+id/up"
+        />
     <TextView
         android:id="@+id/description"
         android:layout_width="wrap_content"
