--- a/app/src/main/res/layout/email_screen.xml
+++ b/app/src/main/res/layout/email_screen.xml
@@ -44,4 +44,10 @@
         android:layout_height="wrap_content"
         android:text="Submit"
         />
+
+    <EditText
+        android:id="@+id/errorMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"/>
 </LinearLayout>
