--- a/app/src/main/res/layout/daily_section.xml
+++ b/app/src/main/res/layout/daily_section.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/daily_use_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/duse_title"
