--- a/app/src/main/res/layout/bt_connect.xml
+++ b/app/src/main/res/layout/bt_connect.xml
@@ -6,7 +6,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello Bluetooth Scanners!" />
+        android:text="Hello Bluetooth Scanners!"
+        android:id = "@+id/test_area"/>
 
     <Button
         android:layout_width="100dp"
