GATT connection maintaied and data is transmited from app to HERO

--- a/app/src/main/res/layout/bt_connect.xml
+++ b/app/src/main/res/layout/bt_connect.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,12 +24,18 @@
         android:id="@+id/StopScanButton"
         android:layout_marginTop="40dp"/>
 
+    <Button
+        android:id="@+id/test_connect"
+        android:layout_width="102dp"
+        android:layout_height="100dp"
+        android:text="test connect"/>
+
     <TextView
+        android:id="@+id/PeripheralTextView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="100dp"
-        android:id="@+id/PeripheralTextView"
-        android:scrollbars="vertical"
-        android:maxLines="30" />
+        android:maxLines="30"
+        android:scrollbars="vertical" />
 
 </LinearLayout>
