Updated REST calls and minor theme update

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,6 +80,16 @@
         android:layout_marginTop="15dp"
         android:id="@+id/bt_connect"
         />
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Test Restful"
+        android:layout_centerHorizontal="true"
+        android:onClick="goToRESTTest"
+        android:layout_marginBottom="15dp"
+        android:id="@+id/rest_test_connect"
+        />
+
 
 
 </RelativeLayout>
