--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_start_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+
+    tools:context=".MainActivity">
+
+    <!--android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"-->
 
     <TextView
         android:id="@+id/scan"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
-    <Button
+    <!--<Button
         android:layout_height="@dimen/main_select_dimen"
         android:text="@string/daily_title"
         android:layout_width="@dimen/main_select_dimen"
@@ -27,7 +30,8 @@
         android:id="@+id/button4"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/button5"
-        android:layout_alignStart="@+id/button5" />
+        android:layout_alignStart="@+id/button5"
+        />
     <Button
         android:layout_height="@dimen/main_select_dimen"
         android:text="@string/stretch_title"
@@ -60,26 +64,26 @@
         android:onClick="goToResults"
         android:layout_below="@+id/button6"
         android:layout_toRightOf="@+id/button4"
-        android:layout_toEndOf="@+id/button4" />
+        android:layout_toEndOf="@+id/button4" />-->
     <Button
+        android:id="@+id/button5"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/email_title"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/bt_connect"
         android:layout_centerHorizontal="true"
         android:onClick="goToEmail"
-        android:layout_marginTop="15dp"
-        android:id="@+id/button5" />
+        android:text="@string/email_title" />
+    <!--android:layout_below="@+id/button"-->
+
     <Button
+        android:id="@+id/bt_connect"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="connect to HERO"
-        android:layout_below="@+id/button5"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/voice_control_row"
         android:layout_centerHorizontal="true"
         android:onClick="connectBluetooth"
-        android:layout_marginTop="15dp"
-        android:id="@+id/bt_connect"
-        />
+        android:text="connect to HERO" />
 
   <!--  <Button
         android:layout_width="300dp"
@@ -91,30 +95,59 @@
         android:id="@+id/rest_test_connect"
         />-->
     <TableRow
+        android:id="@+id/voice_control_row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center">
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:layout_below="@+id/grasps_progress"
+        android:layout_marginTop="30dp">
 
-    <Button
-        android:id="@+id/voice_control_goto"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/scan"
-        android:layout_centerHorizontal="true"
-        android:onClick="goToVoiceControl"
-        android:text="Go To Voice Commands"
-        android:layout_gravity="left"/>
+        <Button
+            android:id="@+id/voice_control_goto"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:onClick="goToVoiceControl"
+            android:text="Go To Voice Commands" />
 
-    <Button
-        android:id="@+id/voice_nw_control_goto"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/scan"
-        android:layout_centerHorizontal="true"
-        android:onClick="goToVoiceNWControl"
-        android:text="Go To Voice Control"
-        android:layout_gravity="left" />
+        <Button
+            android:id="@+id/voice_nw_control_goto"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:onClick="goToVoiceNWControl"
+            android:text="Go To Voice Control" />
     </TableRow>
+
+    <TextView
+        android:id="@+id/grasp_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
+        android:text="Daily Grasps" />
+
+    <at.grabner.circleprogress.CircleProgressView
+        android:id="@+id/grasps_progress"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        CircleProgressView:cpv_maxValue="@string/max_grasps"
+        CircleProgressView:cpv_seekMode="true"
+        CircleProgressView:cpv_showUnit="true"
+        CircleProgressView:cpv_textMode="Value"
+        CircleProgressView:cpv_spin="false"
+        CircleProgressView:cpv_textColor="@android:color/white"
+        CircleProgressView:cpv_textSize="20dp"
+        CircleProgressView:cpv_barColor="@color/buttonOn"
+        CircleProgressView:cpv_spinColor="@color/backgroundButtonColor"
+        />
 
 
 
