--- a/app/src/main/res/layout/activity_voice_control.xml
+++ b/app/src/main/res/layout/activity_voice_control.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context= ".VoiceControl">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".VoiceControl">
 
     <TextView
         android:id="@+id/current_action"
@@ -16,6 +16,5 @@
         android:text="Say OPEN or CLOSE"
         android:textAlignment="center"
         android:gravity="center"/>
-
 
 </RelativeLayout>
