--- a/app/src/main/res/layout/daily_section.xml
+++ b/app/src/main/res/layout/daily_section.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
     <TextView
         android:id="@+id/daily_use_title"
@@ -28,7 +31,7 @@
         android:layout_marginTop="75dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:onClick="onOffSelect"/>
+        />
 
     <Button
         android:layout_width="@dimen/daily_choice_width"
@@ -41,7 +44,7 @@
         android:layout_alignStart="@+id/onOff"
         android:layout_marginTop="15dp"
         android:background="@color/backgroundButtonColor"
-        android:onClick="flexSelect"/>
+        />
 
 
     <Button
